add learning models

--- a/scripts/analyses.Rmd
+++ b/scripts/analyses.Rmd
@@ -31,7 +31,7 @@ Feedback and suggestions:
 Please indicate which study (1a, 1b, 1c, 1d, or 2) and which sample (filtered or unfiltered) you want to analyze. For Study 2 - filtered sample, it is also possible to include `vocabulary` as a predictor. 
 
 ```{r}
-study <- "1a" # options: "1a", "1b", "1c", "1d", "2"
+study <- "2" # options: "1a", "1b", "1c", "1d", "2"
 filtered <- TRUE # options: TRUE = "filtered" OR FALSE = "unfiltered"
 
 # TRUE can only be selected for vocabulary if 
@@ -2148,4 +2148,96 @@ ggscatter(corr_mono, x = "post_switch", y = "pre_switch",
           add = "reg.line", conf.int = TRUE, 
           cor.coef = TRUE, cor.method = "pearson",
           xlab = "Test", ylab = "Training")
+```
+
+# Learning
+
+Check learning across conditions. Differences between mean performance at the last trial of the Training phase vs. performance at the fist trial of Test phase.
+
+## Data
+
+```{r}
+# create dataset from raw data
+if (study == "1c" | study == "1d"){
+  
+  last_trial = 12
+  
+} else{
+  
+  last_trial = 9
+  
+  if (study == "1a"){
+    
+    data_eyetracking_clean <- 
+      data_eyetracking_clean %>% 
+      filter(age_group == "7 months")
+    
+  } else if (study == "2"){
+    
+    data_eyetracking_clean <- 
+      data_eyetracking_clean %>% 
+      filter(age_group == "20 months")
+    
+  }
+}
+
+learning_data <- 
+  make_time_window_data(data_eyetracking_clean,
+                        aois = "target",
+                        predictor_columns = c("language", "trial_type", "trial_num"),
+                        ) %>%
+  filter((trial_num == last_trial & trial_type == "pre-switch") |
+         (trial_num == 1 & trial_type == "post-switch"))
+
+
+if (study == "2") { # add 0.05 to avoid the all-zeros distribution on Test phase
+  
+    new_temp <- tibble(id = "fake_p", 
+                       trial_name = "post-switch_1", 
+                       trial_type = "post-switch", 
+                       language = "Monolinguals", 
+                       SamplesTotal = 60, 
+                       SamplesInAOI = 3)
+    
+    learning_data <- 
+      bind_rows(learning_data, new_temp) %>% 
+      mutate(trial_type = fct_rev(trial_type),
+             language = fct_rev(language))
+  
+}
+```
+
+## Model
+
+```{r}
+# visualizations
+learning_data %>% 
+  ggplot(., aes(x = trial_type, y = SamplesInAOI / SamplesTotal, color = language)) +
+  stat_summary()
+
+learning_data %>% 
+  ggplot(., aes(x = SamplesInAOI / SamplesTotal)) +
+  geom_histogram() +
+  facet_wrap(language ~ trial_type)
+
+# model
+# fixed effects only 
+learning_model <- glm(SamplesInAOI / SamplesTotal ~ language * trial_type,
+                      data = learning_data, 
+                      family = binomial, 
+                      weights = SamplesTotal)
+
+summary(learning_model) 
+tab_model(learning_model)
+
+# plot model fit
+ggpredict(learning_model, terms = c("trial_type", "language"), type = "fe", ci.lvl = FALSE) %>% 
+  plot(colors = cb_palette, line.size = 1, connect.lines = TRUE) +
+  labs(title = paste0("Predicted values of proportion looking to target in Study ", study, " (", filtered_name, ")"), 
+       x = "Trial type", 
+       y = "Predicted proportion looking to target", color = "Language \n group")
+
+#ggsave(paste0("plot_learning_model_", dataset, ".png"), 
+#       path = here("output/table_figure/"), 
+#       device = "png", width = 7, height = 4, units = "in", dpi = 300)
 ```
