--- a/scripts/analyses.Rmd
+++ b/scripts/analyses.Rmd
@@ -31,8 +31,8 @@ Feedback and suggestions:
 Please indicate which study (1a, 1b, 1c, 1d, or 2) and which sample (filtered or unfiltered) you want to analyze. For Study 2 - filtered sample, it is also possible to include `vocabulary` as a predictor. 
 
 ```{r}
-study <- "1a" # options: "1a", "1b", "1c", "1d", "2"
-filtered <- TRUE # options: TRUE = "filtered" OR FALSE = "unfiltered"
+study <- "2" # options: "1a", "1b", "1c", "1d", "2"
+filtered <- FALSE # options: TRUE = "filtered" OR FALSE = "unfiltered"
 
 # TRUE can only be selected for vocabulary if 
 # study <- "2" & filtered == TRUE; 
@@ -1574,7 +1574,7 @@ block_data %>%
 ## Anovas 7 m
 
 ```{r anovas}
-if (study == "1a" & filtered == TRUE){
+if (study == "1a"){
 
 #--------------------------------------------------------------------ANOVA by block: 7m pre-switch
 
@@ -1872,7 +1872,7 @@ post_7_anticipations <- block_data %>%
 ## ANOVAs - 20 m
 
 ```{r}
-if (study == "2" & filtered == TRUE & vocabulary == FALSE){
+if (study == "2"){
 
 ##---------------------------------------------------------------20 month pre switch
 ## ANOVA by block: 20m pre-switch
