--- a/scripts/analyses.Rmd
+++ b/scripts/analyses.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Analyses Script - Iliaei et al. (2020)"
 author: "Hilary Killam and Rodrigo Dal Ben"
-date: "August, 18, 2020"
+date: "2021-06-04"
 output: html_document
 ---
 
@@ -30,9 +30,16 @@ Feedback and suggestions:
 
 Please indicate which study (1a, 1b, 1c, 1d, or 2) and which sample (filtered or unfiltered) you want to analyze. For Study 2 - filtered sample, it is also possible to include `vocabulary` as a predictor. 
 
+```{r setup, include=FALSE}
+
+#renv::restore() #restore from renv snapshot to make sure project uses correct version of packages
+
+```
+
+
 ```{r}
-study <- "2" # options: "1a", "1b", "1c", "1d", "2"
-filtered <- FALSE # options: TRUE = "filtered" OR FALSE = "unfiltered"
+study <- "1a" # options: "1a", "1b", "1c", "1d", "2"
+filtered <- TRUE # options: TRUE = "filtered" OR FALSE = "unfiltered"
 
 # TRUE can only be selected for vocabulary if 
 # study <- "2" & filtered == TRUE; 
@@ -219,6 +226,25 @@ if (study == "1a" | study == "2"){
     
   }
   
+    edu_years <- tribble(
+    ~mother_edu_raw,           ~years_education,
+    "attestation_of_college",  13,
+    "bachelors",               16,
+    "college",                 13,
+    "doctoral",                21,
+    "high_school",             11,
+    "masters",                 18,
+    "other",                   NA,
+    "professional",            18,
+    "some_high_school",        10,
+    "some_university",         15,
+    "trade_school",            12,
+    NA_character_,             NA
+  )
+  
+  edu_data <- descriptive_dataset %>%
+    left_join(edu_years, by = "mother_edu_raw") 
+  
 } else if (study == "1b"){
   
   ANTICIP_START_OFF <- 3000 + 150 # anticipation start + offset 
@@ -339,6 +365,21 @@ if (study == "1a" | study == "2"){
             max_days = floor((max_age - max_months) * 30.436875),            
             num_female = sum(gender == 1)) %>%
   select(-avg_age_days, -min_age_days, -max_age_days, -avg_age, -min_age, -max_age)
+  
+#--------------------------------------SES comparison t-test
+
+  edu_data %>%
+    group_by(age_group, language) %>%
+    summarize(mean_years_edu = mean(years_education, na.rm = TRUE),
+              sd_edu = sd(years_education, na.rm = TRUE),
+              n = length(unique(id)))
+  
+  edu_data %>%
+    group_by(age_group) %>%
+    do(broom::tidy(t.test(.$years_education ~ .$language, data = ., paired = FALSE, var.equal = TRUE))) %>%
+  mutate(cohen_d = statistic/sqrt(parameter +1))
+
+
   
 } else if (study == "1b" | study == "1c" | study == "1d"){
   
@@ -681,11 +722,11 @@ if (study == "1a" | study == "2"){
   
   if (vocabulary == FALSE){
     
-    PRED_COL <- c("language", "age_group", "trial_type", "trial_num")
+    PRED_COL <- c("language", "age_group", "trial_type", "trial_num", "group", "dominant_lang", "dom_lang_exposure", "nondom_langs_exposure", "years_education")
     
   } else if (study == "2" & filtered == TRUE & vocabulary == TRUE){
     
-     PRED_COL <- c("language", "age_group", "cdi_tot_vocab_prod", "vocab_group", "vocab_centred", "vocab_scaled", "trial_type", "trial_num")
+     PRED_COL <- c("language", "age_group", "cdi_tot_vocab_prod", "vocab_group", "vocab_centred", "vocab_scaled", "trial_type", "trial_num", "dominant_lang", "dom_lang_exposure", "nondom_langs_exposure", "years_education")
      
   } else {
     
@@ -719,7 +760,9 @@ if (study == "1a" | study == "2"){
 }
 
 ###----------------------------------------------------CREATE EYETRACKINGR DATA FOR FULL TRIAL PLOTS
-data_eyetracking_full_trials <- make_eyetrackingr_data(analysis_dataset,
+data_eyetracking_full_trials <- analysis_dataset %>%
+    left_join(edu_years, by = "mother_edu_raw") %>%
+  make_eyetrackingr_data(
                                 participant_column = "id",
                                 trial_column = "trial_name", 
                                 time_column = TIM_COL,
@@ -1135,6 +1178,7 @@ For study 1c and 1d, the `gmler()` show a convergence warning. after further ins
 ###Training phase
 ```{r}
 ###------------------------------------------------------------- TRAINING--------------
+
 ###------------------------------------------------------------GLMER ----------------
 # null model
 glmer_null_pre <- 
@@ -1200,6 +1244,7 @@ tab_model(final_model_pre,
           title = TAB_TITLE,
           file = here(paste0("output/table_figure/glermodel_pre_", 
                              dataset, ".doc"))) 
+
 
 ###----------------------------------------------------CONVERGENCE TESTS FOR 1C AND 1D-----------------
 #the tt and ll code below is nowhere close to 0. So I think the regular model should be fine to report.
@@ -1274,7 +1319,6 @@ tab_model(final_model_post,
 # ll <- getME(glmermodel_post,"lower")
 # min(tt[ll==0])
 ```
-
 
 ##Model result plots
 ```{r}
@@ -2340,3 +2384,106 @@ ggpredict(learning_model, terms = c("trial_type", "language"), type = "fe", ci.l
 #       path = here("output/table_figure/"), 
 #       device = "png", width = 7, height = 4, units = "in", dpi = 300)
 ```
+
+#Individual Differences analyses
+
+```{r}
+
+if (study == "1a" & filtered == TRUE) {
+  
+  
+  ###------------------------------------------MODEL WITH 3 LANG GROUPS -----------------
+  
+ #-----------------------------------------Model - TRAINING
+ glmermodel_3langs_pre <- 
+    model_data_pre %>% 
+    mutate(lang_group_type = paste0(language, "_", group),
+           lang_group_type = case_when(str_detect(lang_group_type, "Monolinguals") ~ "Monolinguals",
+                                    TRUE ~ lang_group_type),
+           lang_group_type = factor(lang_group_type, levels = fct_rev(unique(lang_group_type)))) %>%
+    glmer(SamplesInAOI / SamplesTotal ~ lang_group_type * time_bin_centred *
+            trial_num_scaled + (1 | id),
+          data = ., 
+          family = binomial, 
+          weights = SamplesTotal, 
+          control = glmerControl(optimizer="bobyqa", 
+                                 optCtrl = list(maxfun = 100000)))
+  tab_model(glmermodel_3langs_pre)
+  #-----------------------------------------Model - TEST
+    glmermodel_3langs_post <- 
+    model_data_post %>% 
+    mutate(lang_group_type = paste0(language, "_", group),
+           lang_group_type = case_when(str_detect(lang_group_type, "Monolinguals") ~ "Monolinguals",
+                                    TRUE ~ lang_group_type),
+           lang_group_type = factor(lang_group_type, levels = fct_rev(unique(lang_group_type)))) %>%
+    glmer(SamplesInAOI / SamplesTotal ~ lang_group_type * time_bin_centred *
+            trial_num_scaled + (1 | id),
+          data = ., 
+          family = binomial, 
+          weights = SamplesTotal, 
+          control = glmerControl(optimizer="bobyqa", 
+                                 optCtrl = list(maxfun = 100000)))
+  tab_model(glmermodel_3langs_post)
+
+  #-----------------------------------------Visualization - TRAINING  
+  print(ggpredict(glmermodel_3langs_pre, terms = c("time_bin_centred", "trial_num_scaled",
+                                       "lang_group_type"), type = "re", ci.lvl = FALSE) %>%
+      plot(colors = "trial_num_scaled", line.size = 1, connect.lines = TRUE) +
+    labs(title = paste0("Predicted values of proportion looking to target during the Training phase \n in Study ", study, " (", filtered_name, ")"), 
+         x = "Time in milliseconds during anticipation period", 
+         y = "Proportion looking to target", color = "Trial number") +
+    scale_color_manual(values = blues, labels = c(2, 3, 4, 5, 6, 7, 8, 9)) +
+    scale_x_continuous(breaks = c(0, 2, 4), labels = c("0", "500", "1000")) +
+    ylim(-0.1, 1) +
+    theme(axis.title.y = element_text(margin = margin(t = 0, r = 10, b = 0, l = 0)),
+          axis.title.x = element_text(margin = margin(t = 10, r = 0, b = 0, l = 0))))
+   
+  #-----------------------------------------Visualization - TEST  
+    print(ggpredict(glmermodel_3langs_post, terms = c("time_bin_centred", "trial_num_scaled",
+                                       "lang_group_type"), type = "re", ci.lvl = FALSE) %>%
+      plot(colors = "trial_num_scaled", line.size = 1, connect.lines = TRUE) +
+    labs(title = paste0("Predicted values of proportion looking to target during the Test phase \n in Study ", study, " (", filtered_name, ")"), 
+         x = "Time in milliseconds during anticipation period", 
+         y = "Proportion looking to target", color = "Trial number") +
+    scale_color_manual(values = blues, labels = c(2, 3, 4, 5, 6, 7, 8, 9)) +
+    scale_x_continuous(breaks = c(0, 2, 4), labels = c("0", "500", "1000")) +
+    ylim(-0.1, 1) +
+    theme(axis.title.y = element_text(margin = margin(t = 0, r = 10, b = 0, l = 0)),
+          axis.title.x = element_text(margin = margin(t = 10, r = 0, b = 0, l = 0))))
+}
+
+if (study == "2" & filtered == TRUE &  vocabulary == FALSE) {
+ 
+  ###------------------------------------------MODEL WITH SES as predictor ----------------- 
+  
+  ##--------------------------------TRAINING
+    glmermodel_ses_pre <- 
+    model_data_pre %>% 
+    mutate(edu_rescaled = scales::rescale(years_education),
+           edu_centred = scale(years_education, center = TRUE, scale = TRUE)) %>%
+    glmer(SamplesInAOI / SamplesTotal ~ language * time_bin_centred *
+            trial_num_scaled + edu_centred + edu_centred:language + (1 | id),
+          data = ., 
+          family = binomial, 
+          weights = SamplesTotal, 
+          control = glmerControl(optimizer="bobyqa", 
+                                 optCtrl = list(maxfun = 100000)))
+  print(tab_model(glmermodel_ses_pre))
+  
+  ##--------------------------------TEST
+    glmermodel_ses_post <- 
+    model_data_post %>% 
+    mutate(edu_rescaled = scales::rescale(years_education),
+           edu_centred = scale(years_education, center = TRUE, scale = TRUE)) %>%
+    glmer(SamplesInAOI / SamplesTotal ~ language * time_bin_centred *
+            trial_num_scaled + edu_centred + edu_centred:language + (1 | id),
+          data = ., 
+          family = binomial, 
+          weights = SamplesTotal, 
+          control = glmerControl(optimizer="bobyqa", 
+                                 optCtrl = list(maxfun = 100000)))
+  print(tab_model(glmermodel_ses_post))
+}
+  
+```
+
